Added files 01 and 02 for reference Added header image Applied css to header section

--- a/index.html
+++ b/index.html
@@ -18,26 +18,28 @@
         <header>
             <div class="header-logo">Arg Foods</div>
             <ul class="header-list">
-                <li class="header-link">Home</li>
-                <li class="header-link">Recipes</li>
-                <li class="header-link">Shop</li>
+                <li class="header-link"><a href="">Home</a></li>
+                <li class="header-link"><a href="">Recipes</a></li>
+                <li class="header-link"><a href="">Shop</a></li>
             </ul>
         </header>
         <div class="header-content">
-            <h1>The best Argentinian dishes are waiting for you!</h1>
-            <p>Learn how to cook and the tastiest Argentinan food. Exactly as made there and with the original
-                ingredients, you can eat as a native today for free.</p>
-            <button class="header-button">Sign up</button>
+            <div class="header-left">
+                <h1 class="header-title">The best Argentinian dishes are waiting for you!</h1>
+                <p class="header-text">Learn how to cook and the tastiest Argentinan food. Exactly as made there and with the original
+                    ingredients, you can eat as a native today for free.</p>
+                <button class="header-button">Sign up</button>
+            </div>
+            <img class="header-image" src="images/header.jpg"> 
         </div>
-        <img class="header-picture">
     </div>
     <div class="information-section">
         <h2 class="information-title"></h2>
         <ul class="information-list">
-            <li class="information-li"><a><img class="information-empanadas" href=""></a>Empanadas</li>
-            <li class="information-li"><a><img class="information-asado" href=""></a>Asado (Grill)</li>
-            <li class="information-li"><a><img class="information-pizza" href=""></a>Buenos Aires style Pizza</li>
-            <li class="information-li"><a><img class="information-milanesa" href=""></a>Milanesa</li>
+            <li class="information-li"><a><img class="information-empanadas" src="images/empanadas.jpg"></a>Empanadas</li>
+            <li class="information-li"><a><img class="information-asado" src="images/grill.jpg"></a>Asado (Grill)</li>
+            <li class="information-li"><a><img class="information-pizza" src="images/pizza.jpg"></a>Buenos Aires style Pizza</li>
+            <li class="information-li"><a><img class="information-milanesa" src="images/milanesa.jpg"></a>Milanesa</li>
         </ul>
     </div>
     <div class="quote-section">
