Styled information section Styled quote section

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
         </div>
     </div>
     <div class="information-section">
-        <h2 class="information-title"></h2>
+        <h2 class="information-title">Some of our most popular dishes.</h2>
         <ul class="information-list">
-            <li class="information-li"><a><img class="information-empanadas" src="images/empanadas.jpg"></a>Empanadas</li>
-            <li class="information-li"><a><img class="information-asado" src="images/grill.jpg"></a>Asado (Grill)</li>
-            <li class="information-li"><a><img class="information-pizza" src="images/pizza.jpg"></a>Buenos Aires style Pizza</li>
-            <li class="information-li"><a><img class="information-milanesa" src="images/milanesa.jpg"></a>Milanesa</li>
+            <li class="information-li"><a href=""><img class="information-empanadas" src="images/empanadas.jpg"></a>Empanadas</li>
+            <li class="information-li"><a href=""><img class="information-asado" src="images/grill.jpg"></a>Asado (Grill)</li>
+            <li class="information-li"><a href=""><img class="information-pizza" src="images/pizza.jpg"></a>Buenos Aires style Pizza</li>
+            <li class="information-li"><a href=""><img class="information-milanesa" src="images/milanesa.jpg"></a>Milanesa</li>
         </ul>
     </div>
     <div class="quote-section">
         <p class="quote-quote">My mom was from Rosario and she used to cook Argentinian food, she passed away last year
             and I've never learned from her because I was just that lazy. Thanks to Arg Foods I've been able to enjoy my
             favorites childhood dishes once again.</p>
-        <p class="quote-undertext">Rachel Martinez(32), UK</p>
+        <p class="quote-undertext">-Rachel Martinez(32), UK</p>
     </div>
     <div class="signup-section">
         <div class="signup-container">
